--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
    <meta charset="utf-8">
-	<title>Finals</title>
+	<title>Online Portfolio</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -53,10 +53,10 @@
    			<div class="col-twelve">
 
 	   			<h5>Anything is possible, if you give 100% of your efforts.</h5>
-	   			<h1>I'm Florenz L. Manjares.</h1>
+	   			<h1>Hi, I'm Florenz L. Manjares.</h1>
 
 	   			<p class="intro-position">
-	   				<span>BSIT 2-2</span>
+	   				<span>BSIT Student</span>
 	   				<span>Cavite State University</span> 
 	   			</p>
 
@@ -92,7 +92,7 @@
 
    				<img src="images/manjares.jpg" alt="Profile Picture">
 
-   				<p class="lead">Florenz Manjares, 20, is a second year college student from Cavite State University taking up Bachelor of Science and Technology. He loves to be with few persons and likes to discover new things. He want to be a professional web developer and create his own online game.</p>
+   				<p class="lead">Florenz Manjares, is a ollege student from Cavite State University taking up Bachelor of Science and Technology. He loves to discover new things and experiment in his works. He want to be a professional web developer, graphic designer and create his own online game.</p>
    			</div>   			
 
    		</div>   		
@@ -111,8 +111,8 @@
    					<span>Florenz L. Manjares</span>
    				</li>
    				<li>
-   					<strong>Birth Date:</strong>
-   					<span>May 21,2001</span>
+   					<strong>Likes:</strong>
+   					<span>Game developing and graphic designning</span>
    				</li>
    				<li>
    					<strong>Education:</strong>
@@ -130,7 +130,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>As stated below, I have basic knowledges in HTML, CSS, Python, PHP, and Photoshop. I also have minimal skills in illustrating cartoons in different kinds of papers and on computer hardwares.</p>
+   			<p>As stated below, I have basic knowledges in HTML, CSS, Python, PHP, and Photoshop. I also have minimal skills in illustrating cartoons in different kinds of papers(traditional) and on computer hardwares(digital).</p>
 
 				<ul class="skill-bars">
 				   <li>
@@ -198,13 +198,41 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>On-the-Job Trainee</h3>
-	   					<p>July 2019 - August 2019</p>
+	   					<h3>Office Assistant</h3>
+	   					<p>July 2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>General Services Office(Cavite)</h4>
-	   					<p>On my senior high school, I took my work immersion or the ojt at the GSO(General Services Office). I learned a lot of things there and learn how to properly communicate with other people that was older than me or even at my age.</p>
+	   					<h4>General Services Office(Trece Martires City, Cavite)</h4>
+	   					<p>On my senior high school, I took my work immersion at the GSO(General Services Office). I learned a lot of things there and learn how to properly communicate with the work environment and to adapt in the reality of the workplace.</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+
+   			</div> <!-- /timeline-wrap -->   			
+
+   		</div> <!-- /col-twelve -->
+   		
+   	</div> <!-- /resume-timeline -->
+		
+		<div class="col-twelve">
+
+   			<div class="timeline-wrap">
+
+   				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-graduation-cap"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Graphic Designer and Video Editor</h3>
+	   					<p>March 2023</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>AscendProfit(Makati, Metro Manila)</h4>
+	   					<p>In my internship on AscendProfit, I am assigned as a graphic designer that is responsible for generating and conducting health facts for the company, as well as to create and develop short Youtube promotional videos that will be used by the clients. </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -240,7 +268,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Cavite State University</h4>
-	   					<p>I am currently taking up Bachelor of Science in Information and Technology at Cavite State University. This is the university that taught me how to become more valuable on my studies.</p>
+	   					<p>I am currently taking up Bachelor of Science in Information and Technology at Cavite State University.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -279,15 +307,6 @@
 	   					<p>I also took my Junior High School in TNTS(Tanza National Trade School). I took Technical Drafting in my early junior high school because it was my first choice before.</p>
 	   				</div>
 
-	   				<div class="timeline-header">
-	   					<h3>Elementary</h3>
-	   					<p>June 2011 - April 2016</p>
-	   				</div>
-
-	   				<div class="timeline-content">
-	   					<h4>Meycauayan West Central School</h4>
-	   					<p>I took my primary years in school in MWCS. This is where I learn some basic principles in school and further enhance my proper etiquette.</p>
-	   				</div>
 	   			</div> <!-- /timeline-block -->
 
    			</div> <!-- /timeline-wrap -->   			
