--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Anything is possible, if you give 100% of your efforts.</h5>
+	   			<h5>Anything is possible, if you give 100% of your efforts and dedication.</h5>
 	   			<h1>Hi, I'm Florenz L. Manjares.</h1>
 
 	   			<p class="intro-position">
@@ -112,7 +112,7 @@
    				</li>
    				<li>
    					<strong>Likes:</strong>
-   					<span>Game developing and graphic designning</span>
+   					<span>Watching and playing video games, game developing and graphic designning</span>
    				</li>
    				<li>
    					<strong>Education:</strong>
@@ -142,12 +142,12 @@
 				   	<strong>CSS</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent80"><span>80%</span></div>
-				   	<strong>Python</strong>
+				   	<div class="progress percent80"><span>70%</span></div>
+				   	<strong>JavaScript</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>PHP</strong>
+				   	<div class="progress percent75"><span>70%</span></div>
+				   	<strong>Java</strong>
 				   </li>
 				   <li>
 
