--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>AscendProfit(Makati, Metro Manila)</h4>
-	   					<p>In my internship on AscendProfit, I am assigned as a graphic designer that is responsible for generating and conducting health facts for the company, as well as to create and develop short Youtube promotional videos that will be used by the clients. </p>
+	   					<p>In my internship on AscendProfit, I am assigned as a graphic designer and video editor that is responsible for generating and conducting health facts for the company, as well as to create and develop short Youtube promotional videos that will be used by the clients. </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
