--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Goal-oriented and professional with repeated success in making IT projects from start to finish, introducing new and innovative programs and applications to the users.</p>
+   			<p>I am a motivated IT student seeking a challenging role in a dynamic company where I could practice my knowledge and develop my personality as a career person. I want to introduce new and innovative programs and applications to the users.</p>
 
    			<ul class="info-list">
    				<li>
