--- a/index.html
+++ b/index.html
@@ -532,8 +532,8 @@
    			<h5>Location</h5>
 
    			<p>
-            Pabahay 2000 <br>
-            Bagtas Tanza, Cavite<br>
+             <br>
+            Tanza, Cavite<br>
              Philippines
             </p>
 
